; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/inside-secure/extr_safexcel_hash.c_safexcel_ahash_send.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/inside-secure/extr_safexcel_hash.c_safexcel_ahash_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_async_request = type { i32 }
%struct.ahash_request = type { i32 }
%struct.safexcel_ahash_req = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_async_request*, i32, i32*, i32*)* @safexcel_ahash_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @safexcel_ahash_send(%struct.crypto_async_request* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca %struct.crypto_async_request*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.ahash_request*, align 8
  %10 = alloca %struct.safexcel_ahash_req*, align 8
  %11 = alloca i32, align 4
  store %struct.crypto_async_request* %0, %struct.crypto_async_request** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %12 = load %struct.crypto_async_request*, %struct.crypto_async_request** %5, align 8
  %13 = call %struct.ahash_request* @ahash_request_cast(%struct.crypto_async_request* %12)
  store %struct.ahash_request* %13, %struct.ahash_request** %9, align 8
  %14 = load %struct.ahash_request*, %struct.ahash_request** %9, align 8
  %15 = call %struct.safexcel_ahash_req* @ahash_request_ctx(%struct.ahash_request* %14)
  store %struct.safexcel_ahash_req* %15, %struct.safexcel_ahash_req** %10, align 8
  %16 = load %struct.safexcel_ahash_req*, %struct.safexcel_ahash_req** %10, align 8
  %17 = getelementptr inbounds %struct.safexcel_ahash_req, %struct.safexcel_ahash_req* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %4
  %21 = load %struct.crypto_async_request*, %struct.crypto_async_request** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @safexcel_ahash_send_inv(%struct.crypto_async_request* %21, i32 %22, i32* %23, i32* %24)
  store i32 %25, i32* %11, align 4
  br label %32

26:                                               ; preds = %4
  %27 = load %struct.crypto_async_request*, %struct.crypto_async_request** %5, align 8
  %28 = load i32, i32* %6, align 4
  %29 = load i32*, i32** %7, align 8
  %30 = load i32*, i32** %8, align 8
  %31 = call i32 @safexcel_ahash_send_req(%struct.crypto_async_request* %27, i32 %28, i32* %29, i32* %30)
  store i32 %31, i32* %11, align 4
  br label %32

32:                                               ; preds = %26, %20
  %33 = load i32, i32* %11, align 4
  ret i32 %33
}

declare dso_local %struct.ahash_request* @ahash_request_cast(%struct.crypto_async_request*) #1

declare dso_local %struct.safexcel_ahash_req* @ahash_request_ctx(%struct.ahash_request*) #1

declare dso_local i32 @safexcel_ahash_send_inv(%struct.crypto_async_request*, i32, i32*, i32*) #1

declare dso_local i32 @safexcel_ahash_send_req(%struct.crypto_async_request*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
